Additional numpy operations added to numpy_lesson,ipynb

--- a/01-intro/numpy_lesson.ipynb
+++ b/01-intro/numpy_lesson.ipynb
@@ -325,9 +325,548 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0e1c53e-7894-4ab0-a5cc-b470632c5d9a",
+   "metadata": {},
+   "source": [
+    "# Randomly generated arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3a7c0ab1-3661-4796-9a8c-f2635978a5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.70819005, 0.47237517],\n",
+       "       [0.542122  , 0.06879019],\n",
+       "       [0.61563185, 0.42829291],\n",
+       "       [0.24290704, 0.01557047],\n",
+       "       [0.63066276, 0.23944564]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a663ed62-8933-457a-b7c3-0e9df2f102ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.4359949 , 0.02592623],\n",
+       "       [0.54966248, 0.43532239],\n",
+       "       [0.4203678 , 0.33033482],\n",
+       "       [0.20464863, 0.61927097],\n",
+       "       [0.29965467, 0.26682728]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(2)\n",
+    "np.random.rand(5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "35c7ec69-9b07-4d88-bceb-1905988fccab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41675785, -0.05626683],\n",
+       "       [-2.1361961 ,  1.64027081],\n",
+       "       [-1.79343559, -0.84174737],\n",
+       "       [ 0.50288142, -1.24528809],\n",
+       "       [-1.05795222, -0.90900761]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# random normal distribution \n",
+    "\n",
+    "np.random.seed(2)\n",
+    "np.random.randn(5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "11a0d026-9d7c-4552-ac60-9a8ed3d458c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[43.59949021,  2.59262318],\n",
+       "       [54.96624779, 43.53223926],\n",
+       "       [42.03678021, 33.0334821 ],\n",
+       "       [20.4648634 , 61.92709664],\n",
+       "       [29.96546737, 26.68272751]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scalar multiplication by 100\n",
+    "np.random.seed(2)\n",
+    "100 * np.random.rand(5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4c22fd1e-0fc5-4959-afdd-34bfa73e50ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[40, 15],\n",
+       "       [72, 22],\n",
+       "       [43, 82],\n",
+       "       [75,  7],\n",
+       "       [34, 49]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# random integer generation : randint\n",
+    "np.random.seed(2)\n",
+    "np.random.randint(low=0, high=100, size=(5, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de11ebc3-4322-4a1e-a7a3-0c43fc146066",
+   "metadata": {},
+   "source": [
+    "# Element-wise operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "626aba24-d569-43ab-a49e-2802227dac9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a5323cfa-c163-4be1-803e-83d53156f487",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  3,  6,  9, 12])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# perform an operation on all elements without writing a loop\n",
+    "\n",
+    "# multiplication\n",
+    "a * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a6ee1ae4-8b4b-4210-bd22-8829e34f631b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# addition\n",
+    "a + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ca9980ef-7e5f-4ab8-a2ec-08e83f706703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3, -2, -1,  0,  1])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# substraction\n",
+    "a - 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "feac5785-d0fb-4431-be13-15373210e2e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.33333333, 0.66666667, 1.        , 1.33333333])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# division\n",
+    "a / 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b3c13fa8-effd-43e4-a8e8-62a85f98e0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 1.44, 1.96, 2.56, 3.24])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# chain operation with BODMAS principle\n",
+    "b = (10 + (a * 2)) ** 2 / 100\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "402e3157-d266-40be-aecd-459fd7dc1c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 2.44, 3.96, 5.56, 7.24])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# element-wise sum: a * b, a / b, a - b\n",
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b5cea7-0508-4b07-89aa-0a84b8d2b542",
+   "metadata": {},
+   "source": [
+    "# Comparison operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b67184df-f5c5-437a-b01e-70baf56ffb8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5caef285-0acf-4cfa-85a6-0f1deb1da6fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find elements of array 'a' less than or equal 2\n",
+    "a >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c9e204e9-ded5-4a28-a3e3-cd58ab41b634",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 1.44, 1.96, 2.56, 3.24])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "dd48bf49-7ceb-4ce0-a1a8-8fbdba8abb79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find elements of array 'a' greater than elements of array 'b'\n",
+    "a > b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "dda20e10-1b6b-4a2e-b7cb-6386f5f253c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create an array with all elements in array 'a' greater than elements in array 'b': positional comparison.\n",
+    "a[a > b]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f5c29f-5870-4852-8a08-7db7019f0faf",
+   "metadata": {},
+   "source": [
+    "# Summarizing operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3a136c60-b046-40e0-acde-cc2149cb805a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "521c9121-2ed3-472a-9907-4cfc8645d4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return min element in array 'a'\n",
+    "a.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0419208a-d5ac-4a1b-9c16-430ac3d60d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(4)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return max element in array 'a'\n",
+    "a.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "26fbc0f6-33dd-4f24-af2a-e31909f780ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(10)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute sum of all element in array 'a'\n",
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "60efe935-065f-4849-bec0-fed6ff326ce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.4142135623730951)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute standard deviation of all element in array 'a'\n",
+    "a.std()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd2f73d-185e-46d5-8bd5-283fc0c6282f",
+   "id": "00c11452-4f33-4e68-a4e4-75d74d86d7b0",
    "metadata": {},
    "outputs": [],
    "source": []
