--- a/01-intro/linear_algebra.ipynb
+++ b/01-intro/linear_algebra.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "id": "3fd32612-9be0-4336-bbdb-c6aa50d26318",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "add56536-b076-4ae8-ba64-c11ef2632712",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "array([1, 0, 0, 2])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "id": "77214ce6-aac3-4e9b-8d97-580bbd1dd968",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "array([2, 4, 5, 6])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "eddbec80-ec96-48e0-acd3-015ec22b4b89",
    "metadata": {},
    "outputs": [
@@ -125,49 +125,501 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "id": "9caf836b-6630-44ba-b7cd-452a3eb60a91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vector_multiplication(vec1,vec2):\n",
+    "def vector_vector_multiplication(vec1,vec2):\n",
     "    assert u.shape[0] == v.shape[0]\n",
     "\n",
     "    n = u.shape[0]\n",
-    "\n",
     "    result = 0.0\n",
     "    \n",
     "    for i in range(n):\n",
-    "        result = result + u[i] + v[i]\n",
+    "        result = result + u[i] * v[i]\n",
     "\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "id": "536bb0c2-4b72-4c78-8658-eddf563cc46e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(20.0)"
+       "np.float64(14.0)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_multiplication(u,v)"
+    "vector_vector_multiplication(u,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "4653e16a-40c2-4a4b-803e-4d9a9d275b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(14)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using numpy dot operation\n",
+    "u.dot(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "1c822678-0f2d-4a17-b709-5986f6de187d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4, 5, 6],\n",
+       "       [1, 2, 1, 2],\n",
+       "       [3, 1, 2, 1]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U = np.array([\n",
+    "    [2, 4, 5, 6],\n",
+    "    [1, 2, 1, 2],\n",
+    "    [3, 1, 2, 1]\n",
+    "])\n",
+    "\n",
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ab24084d-4a84-487c-a101-a0efd831d139",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 2])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.array([1, 0, 0, 2])\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "f2ed1e78-47af-4f1c-a7cc-7c2d1a6b4b09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_vector_multiplication(U, vec):\n",
+    "    assert U.shape[1] == v.shape[0]\n",
+    "\n",
+    "    num_rows = U.shape[0]\n",
+    "\n",
+    "    result = np.zeros(num_rows)\n",
+    "\n",
+    "    for i in range(num_rows):\n",
+    "        result[i] = vector_vector_multiplication(U[i], vec)\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "dbe8161b-dc4c-49db-b8ea-939f67e9a0fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 5., 5.])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_vector_multiplication(U,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "adbe2588-0d9c-45d3-8aca-ef2daa551952",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14,  5,  5])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using numpy\n",
+    "U.dot(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "b480595b-c5a2-4b25-a83a-81bbc7192032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 1. , 2. ],\n",
+       "       [0. , 0.5, 1. ],\n",
+       "       [0. , 2. , 1. ],\n",
+       "       [2. , 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V = np.array([\n",
+    "    [1, 1, 2],\n",
+    "    [0, 0.5, 1],\n",
+    "    [0, 2, 1],\n",
+    "    [2, 1, 0]\n",
+    "])\n",
+    "\n",
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "ed80f5fe-8249-430c-a042-d6f301945bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_matrix_multiplication(U, V):\n",
+    "    assert U.shape[1] == V.shape[0]\n",
+    "\n",
+    "    num_rows = U.shape[0]\n",
+    "    num_cols = V.shape[1]\n",
+    "\n",
+    "    result = np.zeros((num_rows, num_cols))\n",
+    "    \n",
+    "    for i in range(num_cols):\n",
+    "        vi = V[:, i]\n",
+    "        Uvi = matrix_vector_multiplication(U, vi)\n",
+    "        result[:, i] = Uvi\n",
+    "\n",
+    "    return result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "68013590-1a76-4fc3-97c0-0a33d10cf87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 5., 5.],\n",
+       "       [5., 5., 5.],\n",
+       "       [5., 5., 5.]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_matrix_multiplication(U, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d0050420-a973-4ca3-bfa8-90add0796bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14. , 20. , 13. ],\n",
+       "       [ 5. ,  6. ,  5. ],\n",
+       "       [ 5. ,  8.5,  9. ]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.dot(V)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3293af50-91f7-4a1e-b0b7-a49d1051dba8",
+   "metadata": {},
+   "source": [
+    "# Identity matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2b8cf65b-e1ac-40b0-8e7d-6d8abe220b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4aac4866-d07c-48ec-8304-9dc64d7754ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I = np.eye(3)\n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "fbdc343a-7948-48dc-b21c-c0474ad65cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 1. , 2. ],\n",
+       "       [0. , 0.5, 1. ],\n",
+       "       [0. , 2. , 1. ],\n",
+       "       [2. , 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "064b8575-7425-4bf8-830c-a58f88ecb442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 1. , 2. ],\n",
+       "       [0. , 0.5, 1. ],\n",
+       "       [0. , 2. , 1. ],\n",
+       "       [2. , 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V.dot(I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5231092f-a233-404e-9832-d5edaa91a756",
+   "metadata": {},
+   "source": [
+    "# Matrix Inverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0213c96f-7635-45a3-88aa-e5f5eeccd4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 1. , 2. ],\n",
+       "       [0. , 0.5, 1. ],\n",
+       "       [0. , 2. , 1. ],\n",
+       "       [2. , 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "6b2574b9-dbf8-447b-b461-c188a94fb4ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 1. , 2. ],\n",
+       "       [0. , 0.5, 1. ],\n",
+       "       [0. , 2. , 1. ]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# square matrix\n",
+    "Vs = V[[0, 1, 2]]\n",
+    "Vs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "e997b88a-8300-421d-858d-7d9b264e3247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        , -2.        ,  0.        ],\n",
+       "       [ 0.        , -0.66666667,  0.66666667],\n",
+       "       [ 0.        ,  1.33333333, -0.33333333]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the inverse : Note linalg = Linear Algerbra\n",
+    "Vs_inv = np.linalg.inv(Vs)\n",
+    "Vs_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "382ddee0-ac95-4436-a24f-3eec888fbaed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get identity matrix\n",
+    "Vs_inv.dot(Vs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4653e16a-40c2-4a4b-803e-4d9a9d275b9a",
+   "id": "bec44ab8-dd96-46aa-a412-e875a1e3c5aa",
    "metadata": {},
    "outputs": [],
    "source": []
